Add ref for related_work
Add ref for related_work

--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -1,4 +1,4 @@
-﻿@string{iccad = "Proc. Int. Conf. on Computer Aided Design (ICCAD)"}
+@string{iccad = "Proc. Int. Conf. on Computer Aided Design (ICCAD)"}
 @string{dac = "Proc. Design Automation Conf. (DAC)"}
 @string{eurodac = "Proc. European Design Automation Conf."}
 @string{date = "Proc. European Design and Test Conf. (DATE)"}
@@ -1735,3 +1735,58 @@ Year={2016}
   publisher={ACM}
 }
 
+@inproceedings{Wang:ASICON'01,
+	title={A thermal model for the top layer of {3D} integrated circuits considering through silicon vias},
+	author={Fengjuan Wang and Zhangming Zhu and Yintang Yang and Ning Wang},
+	booktitle={ASIC (ASICON), 2011 IEEE 9th International Conference on},
+	pages={618--620},
+	year={2011},
+	organization={IEEE}
+}
+
+@inproceedings{Chen:ISLPED'11,
+	title={Analysis and mitigation of lateral thermal blockage effect of through-silicon-via in {3D IC} designs},
+	author={Yibo Chen and Eren Kursun and Dave Motschman and Charles Johnson and Yuan Xie},
+	booktitle=islped,
+	pages={397--402},
+	year={2011},
+	organization={IEEE Press}
+}
+
+@inproceedings{Cong:ASPDAC'07,
+	title={Thermal-aware {3D IC} placement via transformation},
+	author={Jason Cong and Guojie Luo and Jie Wei and Yan Zhang},
+	booktitle=aspdac,
+	pages={780--785},
+	year={2007},
+	organization={IEEE}
+}
+
+@inproceedings{Cong:DAC'11,
+	title={Thermal-aware cell and through-silicon-via co-placement for {3D ICs}},
+	author={Jason Cong and Guojie Luo and Yiyu Shi},
+	booktitle=dac,
+	pages={670--675},
+	year={2011},
+	organization={ACM}
+}
+
+@inproceedings{Athikulwongse:ICCAD'10,
+	title={Stress-driven {3D-IC} placement with {TSV} keep-out zone and regularity study},
+	author={Krit Athikulwongse and Ashutosh Chakraborty and Jae-Seok Yang and David Z Pan and Sung Kyu Lim},
+	booktitle=iccad,
+	pages={669--674},
+	year={2010},
+	organization={IEEE Press}
+}
+
+@article{Zou:TVLSI'17,
+	title={Thermomechanical Stress-Aware Management for {3-D IC} Designs},
+	author={Qiaosha Zou and Eren Kursun and Yuan Xie},
+	journal=tvlsi,
+	volume={25},
+	number={9},
+	pages={2678--2682},
+	year={2017},
+	publisher={IEEE}
+}
