--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -1790,3 +1790,14 @@ Year={2016}
 	year={2017},
 	publisher={IEEE}
 }
+
+@inproceedings{Srinivasan:ACMSCA'04,
+	title={The case for lifetime reliability-aware microprocessors},
+	author={Jayanth Srinivasan and Sarita V Adve and Pradip Bose and Jude A Rivers},
+	booktitle={ACM SIGARCH Computer Architecture News},
+	volume={32},
+	number={2},
+	pages={276},
+	year={2004},
+	organization={IEEE Computer Society}
+}
