--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -1773,7 +1773,7 @@ Year={2016}
 
 @inproceedings{Athikulwongse:ICCAD'10,
 	title={Stress-driven {3D-IC} placement with {TSV} keep-out zone and regularity study},
-	author={Krit Athikulwongse and Ashutosh Chakraborty and Jae-Seok Yang and David Z Pan and Sung Kyu Lim},
+	author={Krit Athikulwongse and Ashutosh Chakraborty and Jae-Seok Yang and David Z. Pan and Sung Kyu Lim},
 	booktitle=iccad,
 	pages={669--674},
 	year={2010},
@@ -1793,11 +1793,20 @@ Year={2016}
 
 @inproceedings{Srinivasan:ACMSCA'04,
 	title={The case for lifetime reliability-aware microprocessors},
-	author={Jayanth Srinivasan and Sarita V Adve and Pradip Bose and Jude A Rivers},
+	author={Jayanth Srinivasan and Sarita V. Adve and Pradip Bose and Jude A. Rivers},
 	booktitle={ACM SIGARCH Computer Architecture News},
 	volume={32},
 	number={2},
 	pages={276},
 	year={2004},
 	organization={IEEE Computer Society}
+}
+
+@inproceedings{Srinivasan:ISCA'05,
+	title={Exploiting structural duplication for lifetime reliability enhancement},
+	author={Jayanth Srinivasan and Sarita V. Adve and Pradip Bose and Jude A. Rivers},
+	booktitle=isca,
+	pages={520--531},
+	year={2005},
+	organization={IEEE}
 }
