--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -1,4 +1,4 @@
-@string{iccad = "Proc. Int. Conf. on Computer Aided Design (ICCAD)"}
+﻿@string{iccad = "Proc. Int. Conf. on Computer Aided Design (ICCAD)"}
 @string{dac = "Proc. Design Automation Conf. (DAC)"}
 @string{eurodac = "Proc. European Design Automation Conf."}
 @string{date = "Proc. European Design and Test Conf. (DATE)"}
@@ -1685,9 +1685,9 @@ pages = {267--285},
 year = {1982},
 }
 
-@article{Samuel:EB'11,
+@article{Privara:EB'11,
    title={Model predictive control of a building heating system: The first experience},
-  author={Privara Samuel and {\v{S}}irok{\`y} Jan and Ferkl Luk{\'a}{\v{s}} and Cigler Ji{\v{r}}{\'\i}},
+  author={Samuel Privara and Jan {\v{S}}irok{\`y} and Luk{\'a}{\v{s}} Ferkl and Ji{\v{r}}{\'\i} Cigler},
   journal={Energy and Buildings},
   volume={43},
   number={2},
@@ -1696,9 +1696,9 @@ year = {1982},
   publisher={Elsevier}
 }
 
-@article{Kenneth:QAM'44,
+@article{Levenberg:QAM'44,
   title={A method for the solution of certain non-linear problems in least squares},
-  author={Levenberg Kenneth},
+  author={Kenneth Levenberg},
   journal={Quarterly of applied mathematics},
   volume={2},
   number={2},
