--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -1,4 +1,4 @@
-﻿@string{iccad = "Proc. Int. Conf. on Computer Aided Design (ICCAD)"}
+@string{iccad = "Proc. Int. Conf. on Computer Aided Design (ICCAD)"}
 @string{dac = "Proc. Design Automation Conf. (DAC)"}
 @string{eurodac = "Proc. European Design Automation Conf."}
 @string{date = "Proc. European Design and Test Conf. (DATE)"}
@@ -1809,4 +1809,15 @@ Year={2016}
 	pages={520--531},
 	year={2005},
 	organization={IEEE}
+}
+
+@article{Lu:MICRO'05,
+	title={Improved thermal management with reliability banking},
+	author={Zhijian Lu and John Lach and Mircea R. Stan and Kevin Skadron},
+	journal={IEEE Micro},
+	volume={25},
+	number={6},
+	pages={40--49},
+	year={2005},
+	publisher={IEEE}
 }
