--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -1713,7 +1713,7 @@ Publisher={The MIT Press},
 Year={2016}
 }
 
-@article{Yann:IEEEPROC’98,
+@article{LeCun:IEEEPROC’98,
   title={Gradient-based learning applied to document recognition},
   author={Yann LeCun and L{\'e}on Bottou and Yoshua Bengio and Patrick Haffner},
   journal= ieeeproc,
@@ -1724,9 +1724,9 @@ Year={2016}
   publisher={IEEE}
 }
 
-@article{Moongon:ACMCOMM’14,
+@article{Jung:ACMCOMM’14,
   title={{TSV} stress-aware full-chip mechanical reliability analysis and optimization for {3D IC}},
-  author={Moongon Jung and Joydeep Mitra and David Z.Pan  and Sung Kyu Lim},
+  author={Moongon Jung and Joydeep Mitra and David Z.Pan and Sung Kyu Lim},
   journal=acmcomm,
   volume={57},
   number={1},
