--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -1,4 +1,4 @@
-@string{iccad = "Proc. Int. Conf. on Computer Aided Design (ICCAD)"}
+﻿@string{iccad = "Proc. Int. Conf. on Computer Aided Design (ICCAD)"}
 @string{dac = "Proc. Design Automation Conf. (DAC)"}
 @string{eurodac = "Proc. European Design Automation Conf."}
 @string{date = "Proc. European Design and Test Conf. (DATE)"}
@@ -480,24 +480,21 @@ pages = {187--192}
  }
 
 @Article{Overschee:Auto'94,
-  author =               {P.~V.~Overschee and B.~D.~Moor},
-  title =                {{N4SID}: Subspace Algorithms for the Identification of Combined Deterministic-Stochastic Systems},
-  journal =      {Automatica},
-  year =                 {1994},
-  OPTkey =               {},
-  volume =       {30},
-  number =       {1},
-  pages =        {75--93},
-  OPTnote =      {},
-  OPTannote =    {}
+  title={N4SID: Subspace algorithms for the identification of combined deterministic-stochastic systems},
+  author={ Peter Van Overschee and Bart De Moor},
+  journal={Automatica},
+  volume={30},
+  number={1},
+  pages={75--93},
+  year={1994},
+  publisher={Elsevier}
 }
 
 @BOOK{Katayama:Book'05,
-  AUTHOR =       "Tohru Katayama",
-  OPTeditor =       "",
-  TITLE =        "Subspace Methods for System Identification",
-  PUBLISHER =    "Springer",
-  YEAR =         "2005",
+  author =       {Tohru Katayama},
+  title =        {Subspace Methods for System Identification},
+  publisher =    {Springer},
+  year =         {2005},
 }
 
 @inproceedings{Brooks:ISCA'00,
@@ -845,8 +842,8 @@ url = {http://www.trnsys.com/}
 }
 
 @inproceedings{Massoumy:ICCPS'13,
-author = {Massoumy, M and Zhu, Qi and Li, Cheng and Meggers, F and Sangiovanni-Vincentelli, A},
-title = {{Co-design of Control Algorithm and Embedded Platform for Building HVAC Systems }},
+author = {Mehdi Maasoumyand Qi Zhu and Cheng Li and Forrest Meggers and Alberto Sanqiovanni-Vincentelli},
+title = {Co-design of Control Algorithm and Embedded Platform for Building HVAC Systems },
 booktitle = {International Conference on Cyber Physical Systems (ICCPS)},
 year = {2013},
 pages = {61--70},
@@ -855,16 +852,16 @@ month = {April}
 }
 
 @book{Malkawi:Book'04,
-editor = {Malkawi, Ali and Augenbroe, Godfried},
-title = {{Advanced Building Simulation}},
+editor = {Ali Malkawi and Godfried Augenbroe},
+title = {Advanced Building Simulation},
 publisher = {Spon Press},
 year = {2004},
 month = {June}
 }
 
 @inproceedings{Kim:IBPSA'12,
-author = {Kim, D and Braun, J E},
-title = {{Reduced-Order Building Modeling For Application to Model-Based Predictive Control}},
+author = {Donghun Kim and James E Braun},
+title = {Reduced-Order Building Modeling For Application to Model-Based Predictive Control},
 booktitle = {5th National Conference of Innational Building Performance Simulation Association (IBPSA-USA)},
 year = {2012},
 pages = {554--561},
@@ -872,18 +869,18 @@ month = aug
 }
 
 @inproceedings{Deng:ACC'10,
-author = {Deng, Kun and Barooah, Prabir and Mehta, Prashant G and Meyn, Sean P},
-title = {{Building Thermal Model Reduction via Aggregation of States}},
-booktitle = {American Control Conference},
-year = {2010},
-pages = {5118--5123},
-address = {Baltimore, MD},
-month = jun
+  title={Building thermal model reduction via aggregation of states},
+  author={Kun Deng and Prabir Barooah and Prashant G Mehta and Sean P Meyn},
+  booktitle={American Control Conference},
+  pages={5118--5123},
+  year={2010},
+  address = {Baltimore, MD},
+  month = jun
 }
 
 @inproceedings{Eisenhower:DFD'12,
-author = {Eisenhower, Bryan and Mezic, Igor},
-title = {{Extracting Dynamic Information from Whole-building Energy Models}},
+author = {Bryan Eisenhower and Igor Mezic},
+title = {Extracting Dynamic Information from Whole-building Energy Models},
 booktitle = {Proc. of Conference on Dynamics for Design (DFD)},
 year = {2012},
 pages = {3--10},
@@ -892,7 +889,7 @@ month = apr
 }
 
 @Article{Hua:TAP'89,
-  author =       {Y.~Hua and T.K.~Sarkar},
+  author =       {Y.~Hua and T.K.~Sarkar}, 
   title =        {Generalized pencil of function method for extracting poles of an EM system from its transient responses},
   journal =      {IEEE Trans. on Antennas and Propagation},
   year =         {1989},
@@ -903,15 +900,16 @@ month = apr
   month =    {Feb.},
 }
 
-@article{Crawley:JEB'01,
-author = {Crawley, D B and Lawrie, L K and Winkelmann, F C and Buhl, W F and Huang, Y J and Pedersen, C O and Strand, R K and Liesen, R J and Fisher, D E and Witte, M J and Glazer, J},
-title = {{EnergyPlus: creating a new-generation building energy simulation program}},
-journal = {Energy and Buildings},
-year = {2001},
-volume = {33},
-number = {4},
-pages = {319--331},
-month = {April}
+@article{Crawley:EB'01,
+  author={Drury B Crawley and Linda K Lawrie and Frederick C Winkelmann and Walter F Buhl and  Y Joe Huang and Curtis O Pedersen and             Richard K Strand and Richard J Liesen and Daniel E Fisher and Michael J Witte and Jason Glazer},
+  title={EnergyPlus: creating a new-generation building energy simulation program},
+  journal={Energy and buildings},
+  year={2001},
+  month = {April},
+  volume={33},
+  number={4},
+  pages={319--331},  
+  publisher={Elsevier},
 }
 
 @article{Abdollahi:TVLSI'04,
@@ -1290,7 +1288,7 @@ Year = {2010},
 }
 
 @article{Li:TODAES'10,
- author = {Li, Duo and Tan, Sheldon X.-D. and Pacheco, Eduardo H. and Tirumala, Murli},
+ author = {Duo Li and Sheldon X.-D. Tan and Eduardo H. Pacheco and Murli Tirumala},
  title = {Parameterized architecture-level dynamic thermal models for multicore microprocessors},
  journal = todaes,
  volume = {15},
@@ -1821,3 +1819,14 @@ Year={2016}
 	year={2005},
 	publisher={IEEE}
 }
+
+@book{Overschee:Book'2012,
+  title={Subspace identification for linear systems: Theory—Implementation—Applications},
+  author={Peter Van Overschee and BL De Moor},
+  year={2012},
+  publisher={Springer Science \& Business Media}
+}
+
+
+
+
