--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -831,9 +831,11 @@ OPTyear = {2009},
 url = {http://opencores.org}
 }
 
-@ONLINE{build_doe_data:Online,
-title = {{Building Energy Data Book of DOE}},
-url = {http://buildingsdatabook.eren.doe.gov}
+@ONLINE{buildingenergydata:Online,
+title = {Building Energy Data Book of DOE},
+url = {https://ieer.org/wp/wp-content/uploads/2012/03/DOE-2011-Buildings-Energy-DataBook-BEDB.pdf},
+year = {2012},
+month = {March}
 }
 
 @ONLINE{trnsys:Online,
@@ -1296,7 +1298,6 @@ Year = {2010},
  year = {2010},
  issn = {1084--4309},
  pages = {1--22},
- doi = {http://doi.acm.org/10.1145/1698759.1698766},
  publisher = {ACM},
  address = {New York, NY, USA},
  }
@@ -1827,6 +1828,13 @@ Year={2016}
   publisher={Springer Science \& Business Media}
 }
 
-
-
+@article{Fux:EB'14,
+  title={EKF based self-adaptive thermal model for a passive house},
+  author={Samuel F Fux and Araz Ashouri and Michael J Benz and Lino Guzzella},
+  journal={Energy and Buildings},
+  volume={68},
+  pages={811--817},
+  year={2014},
+  publisher={Elsevier}
+}
 
