--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -1829,7 +1829,7 @@ Year={2016}
 }
 
 @article{Fux:EB'14,
-  title={EKF based self-adaptive thermal model for a passive house},
+  title={{EKF} based self-adaptive thermal model for a passive house},
   author={Samuel F Fux and Araz Ashouri and Michael J Benz and Lino Guzzella},
   journal={Energy and Buildings},
   volume={68},
@@ -1837,4 +1837,31 @@ Year={2016}
   year={2014},
   publisher={Elsevier}
 }
+
+@inproceedings{Prvara:CCA'11,
+  title={Modeling and identification of a large multi-zone office building},
+  author={Samuel Pr{\'\i}vara and Zden{\v{e}}k V{\'a}{\v{n}}a and Dimitrios Gyalistras and  Ji{\v{r}}{\'\i} Cigler and Carina           Sagerschnig and Manfred Morari and Luk{\'a}{\v{s}} Ferkl},
+  booktitle={Control Applications (CCA), 2011 IEEE International Conference on},
+  pages={55--60},
+  year={2011},
+  organization={IEEE}
+}
+
+@article{Ferkl:EB'l0,
+  title={Ceiling radiant cooling: Comparison of ARMAX and subspace identification modelling methods},
+  author={Luk{\'a}{\v{s}} Ferkl and Jan {\v{S}}irok{\`y}},
+  journal={Building and Environment},
+  volume={45},
+  number={1},
+  pages={205--212},
+  year={2010},
+  publisher={Elsevier}
+}
+
+
+
+
+
+
+
 
