--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -1,4 +1,4 @@
-﻿@string{iccad = "Proc. Int. Conf. on Computer Aided Design (ICCAD)"}
+@string{iccad = "Proc. Int. Conf. on Computer Aided Design (ICCAD)"}
 @string{dac = "Proc. Design Automation Conf. (DAC)"}
 @string{eurodac = "Proc. European Design Automation Conf."}
 @string{date = "Proc. European Design and Test Conf. (DATE)"}
@@ -1858,6 +1858,14 @@ Year={2016}
   publisher={Elsevier}
 }
 
+@inproceedings{Coskun:DATE'09,
+	title={Dynamic thermal management in 3D multicore architectures},
+	author={Ayse K Coskun and Jose L Ayala and David Atienza and Tajana Simunic Rosing and Yusuf Leblebici},
+	booktitle={date},
+	pages={1410--1415},
+	year={2009},
+	organization={European Design and Automation Association}
+}
 
 
 
