--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -1,4 +1,4 @@
-@string{iccad = "Proc. Int. Conf. on Computer Aided Design (ICCAD)"}
+﻿@string{iccad = "Proc. Int. Conf. on Computer Aided Design (ICCAD)"}
 @string{dac = "Proc. Design Automation Conf. (DAC)"}
 @string{eurodac = "Proc. European Design Automation Conf."}
 @string{date = "Proc. European Design and Test Conf. (DATE)"}
@@ -1847,7 +1847,7 @@ Year={2016}
   organization={IEEE}
 }
 
-@article{Ferkl:EB'l0,
+@article{Ferkl:BE'l0,
   title={Ceiling radiant cooling: Comparison of ARMAX and subspace identification modelling methods},
   author={Luk{\'a}{\v{s}} Ferkl and Jan {\v{S}}irok{\`y}},
   journal={Building and Environment},
@@ -1867,7 +1867,14 @@ Year={2016}
 	organization={European Design and Automation Association}
 }
 
-
+@inproceedings{li:MSCPES'15,
+  title={Building energy forecasting using system identification based on system characteristics test},
+  author={Xiwang Li and Jin Wen and Er-Wei Bai},
+  booktitle={Modeling and Simulation of Cyber-Physical Energy Systems (MSCPES), 2015 Workshop on},
+  pages={1--6},
+  year={2015},
+  organization={IEEE}
+}
 
 
 
