--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -1,4 +1,4 @@
-@string{iccad = "Proc. Int. Conf. on Computer Aided Design (ICCAD)"}
+﻿@string{iccad = "Proc. Int. Conf. on Computer Aided Design (ICCAD)"}
 @string{dac = "Proc. Design Automation Conf. (DAC)"}
 @string{eurodac = "Proc. European Design Automation Conf."}
 @string{date = "Proc. European Design and Test Conf. (DATE)"}
@@ -1867,7 +1867,7 @@ Year={2016}
 	organization={European Design and Automation Association}
 }
 
-@inproceedings{li:MSCPES'15,
+@inproceedings{Li:MSCPES'15,
   title={Building energy forecasting using system identification based on system characteristics test},
   author={Xiwang Li and Jin Wen and Er-Wei Bai},
   booktitle={Modeling and Simulation of Cyber-Physical Energy Systems (MSCPES), 2015 Workshop on},
@@ -1876,7 +1876,24 @@ Year={2016}
   organization={IEEE}
 }
 
+@article{Kasahara:AT'99,
+  title={Design and tuning of robust PID controller for HVAC systems},
+  author={Masato Kasahara and Tadahiko Matsuba and Yoshiaki Kuzuu and Takanori Yamazakiand Yukihiro Hashimoto and others},
+  journal={ASHRAE Transactions},
+  volume={105},
+  pages={154},
+  year={1999},
+  publisher={American Society of Heating, Refrigeration and Air Conditioning Engineers, Inc.}
+}
 
-
-
+@article{Salsbury:HR'98,
+  title={A temperature controller for VAV air-handling units based on simplified physical models},
+  author={TI Salsbury},
+  journal={HVAC\&R Research},
+  volume={4},
+  number={3},
+  pages={265--279},
+  year={1998},
+  publisher={Taylor \& Francis}
+}
 
