--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -1822,14 +1822,14 @@ Year={2016}
 }
 
 @book{Overschee:Book'2012,
-  title={Subspace identification for linear systems: Theory—Implementation—Applications},
+  title={{Subspace identification for linear systems: Theory—Implementation—Applications}},
   author={Peter Van Overschee and BL De Moor},
   year={2012},
   publisher={Springer Science \& Business Media}
 }
 
 @article{Fux:EB'14,
-  title={{EKF} based self-adaptive thermal model for a passive house},
+  title={{EKF based self-adaptive thermal model for a passive house}},
   author={Samuel F Fux and Araz Ashouri and Michael J Benz and Lino Guzzella},
   journal={Energy and Buildings},
   volume={68},
@@ -1877,7 +1877,7 @@ Year={2016}
 }
 
 @article{Kasahara:AT'99,
-  title={Design and tuning of robust PID controller for HVAC systems},
+  title={{Design and tuning of robust PID controller for HVAC systems}},
   author={Masato Kasahara and Tadahiko Matsuba and Yoshiaki Kuzuu and Takanori Yamazakiand Yukihiro Hashimoto and others},
   journal={ASHRAE Transactions},
   volume={105},
@@ -1887,7 +1887,7 @@ Year={2016}
 }
 
 @article{Salsbury:HR'98,
-  title={A temperature controller for VAV air-handling units based on simplified physical models},
+  title={{A temperature controller for VAV air-handling units based on simplified physical models}},
   author={TI Salsbury},
   journal={HVAC\&R Research},
   volume={4},
@@ -1896,4 +1896,92 @@ Year={2016}
   year={1998},
   publisher={Taylor \& Francis}
 }
+
+@article{Calvino:EB'04,
+  title={The control of indoor thermal comfort conditions: introducing a fuzzy adaptive controller},
+  author={Francesco Calvino and Maria La Gennusa and Gianfranco La Gennusa and Gianluca Scaccianoce},
+  journal={Energy and buildings},
+  volume={36},
+  number={2},
+  pages={97--102},
+  year={2004},
+  publisher={Elsevier}
+}
+
+@article{Soyguder:ESA'09,
+  title={{Design and simulation of self-tuning PID-type fuzzy adaptive control for an expert HVAC system}},
+  author={Servet Soyguder and Mehmet Karakose and Hasan Alli},
+  journal={Expert systems with applications},
+  volume={36},
+  number={3},
+  pages={4566--4573},
+  year={2009},
+  publisher={Elsevier}
+}
+
+@article{Bai:ECM'07,
+  title={{A new adaptive PI controller and its application in HVAC systems}},
+  author={Jianbo Bai and Xiaosong Zhang},
+  journal={Energy Conversion and Management},
+  volume={48},
+  number={4},
+  pages={1043--1054},
+  year={2007},
+  publisher={Elsevier}
+}
+
+@article{Bai:EB'08,
+  title={{Development of an adaptive Smith predictor-based self-tuning PI controller for an HVAC system in a test room}},
+  author={Jianbo Bai and Shengwei Wang and Xiaosong Zhang},
+  journal={Energy and Buildings},
+  volume={40},
+  number={12},
+  pages={2244--2252},
+  year={2008},
+  publisher={Elsevier}
+}
+
+@article{So:BE'95,
+  title={{New HVAC control by system identification}},
+  author={Albert TP So and WL So and TT Chow and WL Tse},
+  journal={Building and Environment},
+  volume={30},
+  number={3},
+  pages={349--357},
+  year={1995},
+  publisher={Elsevier}
+}
+
+@article{Vsiroky:AE'11,
+  title={Experimental analysis of model predictive control for an energy efficient building heating system},
+  author={{Jan \v{S}}irok{\`y} and Frauke Oldewurtel and Ji{\v{r}}{\'\i} Oldewurtel and Samuel Pr{\'\i}vara},
+  journal={Applied energy},
+  volume={88},
+  number={9},
+  pages={3079--3087},
+  year={2011},
+  publisher={Elsevier}
+}
+
+@article{Afram:BE'14,
+  title={{Theory and applications of HVAC control systems--A review of model predictive control (MPC)}},
+  author={Abdul Afram and Farrokh Janabi-Sharifi},
+  journal={Building and Environment},
+  volume={72},
+  pages={343--355},
+  year={2014},
+  publisher={Elsevier}
+}
+
+@inproceedings{Cigler:ICARCV'10,
+  title={Subspace identification and model predictive control for buildings},
+  author={Ji{\v{r}}i Cigler and Samuel Pr{\'\i}vara},
+  booktitle={Control Automation Robotics \& Vision (ICARCV), 2010 11th International Conference on},
+  pages={750--755},
+  year={2010},
+  organization={IEEE}
+}
+
+
+
 
