--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -1982,6 +1982,11 @@ Year={2016}
   organization={IEEE}
 }
 
-
-
-
+@inproceedings{Ma:ISGT'11,
+  title={Economic model predictive control for building energy systems},
+  author={Jingran Ma and S Joe Qin and Bo Li and Tim Salsbury},
+  booktitle={Innovative Smart Grid Technologies (ISGT), 2011 IEEE PES},
+  pages={1--6},
+  year={2011},
+  organization={IEEE}
+}
