--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -1,4 +1,4 @@
-﻿@string{iccad = "Proc. Int. Conf. on Computer Aided Design (ICCAD)"}
+@string{iccad = "Proc. Int. Conf. on Computer Aided Design (ICCAD)"}
 @string{dac = "Proc. Design Automation Conf. (DAC)"}
 @string{eurodac = "Proc. European Design Automation Conf."}
 @string{date = "Proc. European Design and Test Conf. (DATE)"}
@@ -1989,4 +1989,22 @@ Year={2016}
   pages={1--6},
   year={2011},
   organization={IEEE}
+}
+
+@inproceedings{Leduc:IITC'07,
+	title={Challenges for {3D IC} integration: bonding quality and thermal management},
+	author={Patrick Leduc and Francois de Crecy and Murielle Fayolle and Barbara Charlet and Thierry Enot and Marc Zussy and Bob Jones and Jean-Charles Barbe and Nelly Kernevez and Nicolas Sillon and others},
+	booktitle={International Interconnect Technology Conference, IEEE 2007},
+	pages={210--212},
+	year={2007},
+	organization={IEEE}
+}
+
+@inproceedings{Puttaswamy:GLVLSI'06,
+	title={Thermal analysis of a {3D} die-stacked high-performance microprocessor},
+	author={Kiran Puttaswamy and Gabriel H Loh},
+	booktitle=glvlsi,
+	pages={19--24},
+	year={2006},
+	organization={ACM}
 }
