--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -2008,3 +2008,32 @@ Year={2016}
 	year={2006},
 	organization={ACM}
 }
+
+@article{Todri:TVLSI'13,
+	title={A study of tapered 3-D TSVs for power and thermal integrity},
+	author={Aida Todri and Sandip Kundu and Patrick Girard and Alberto Bosio and Luigi Dilillo and Arnaud Virazel},
+	journal=tvlsi,
+	volume={21},
+	number={2},
+	pages={306--319},
+	year={2013},
+	publisher={IEEE}
+}
+
+@inproceedings{Pan:ASPDAC'12,
+	title={Design for manufacturability and reliability for {TSV}-based {3D ICs}},
+	author={David Z. Pan and Sung Kyu Lim and Krit Athikulwongse and Moongon Jung and Joydeep Mitra and Jiwoo Pak and Mohit Pathak and Jae-seok Yang},
+	booktitle=aspdac,
+	pages={750--755},
+	year={2012},
+	organization={IEEE}
+}
+
+@inproceedings{Yu:ISQED'12,
+	title={Methodology for analysis of {TSV} stress induced transistor variation and circuit performance},
+	author={Li Yu and Wen-Yao Chang and Kewei Zuo and Jean Wang and Douglas Yu and Duane Boning},
+	booktitle=isqed,
+	pages={216--222},
+	year={2012},
+	organization={IEEE}
+}
