--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -1,4 +1,4 @@
-@string{iccad = "Proc. Int. Conf. on Computer Aided Design (ICCAD)"}
+﻿@string{iccad = "Proc. Int. Conf. on Computer Aided Design (ICCAD)"}
 @string{dac = "Proc. Design Automation Conf. (DAC)"}
 @string{eurodac = "Proc. European Design Automation Conf."}
 @string{date = "Proc. European Design and Test Conf. (DATE)"}
@@ -2036,4 +2036,46 @@ Year={2016}
 	pages={216--222},
 	year={2012},
 	organization={IEEE}
+}
+
+@inproceedings{Chan:IJCNN'99,
+  title={Training recurrent network with block-diagonal approximated Levenberg-Marquardt algorithm},
+  author={Lai-Wan Chan and Chi-Cheong Szeto},
+  booktitle={Neural Networks, 1999. IJCNN'99. International Joint Conference on},
+  volume={3},
+  pages={1521--1526},
+  year={1999},
+  organization={IEEE}
+}
+
+@article{Tanoto:TELKOMNIKA'13,
+  title={Levenberg-Marquardt recurrent networks for long-term electricity peak load forecasting},
+  author={Yusak Tanoto and Weerakorn  Ongsakul and Charles OP Marpaung},
+  journal={TELKOMNIKA (Telecommunication Computing Electronics and Control)},
+  volume={9},
+  number={2},
+  pages={257--266},
+  year={2013}
+}
+
+@article{Williams:NC'89,
+  title={A learning algorithm for continually running fully recurrent neural networks},
+  author={Ronald J Williams and David Zipser},
+  journal={Neural computation},
+  volume={1},
+  number={2},
+  pages={270--280},
+  year={1989},
+  publisher={MIT Press}
+}
+
+@article{Werbos:PI'90,
+  title={Backpropagation through time: what it does and how to do it},
+  author={Paul J Werbos},
+  journal={Proceedings of the IEEE},
+  volume={78},
+  number={10},
+  pages={1550--1560},
+  year={1990},
+  publisher={IEEE}
 }
