--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -95,7 +95,7 @@
 
 @inproceedings{ZhangWang:ISQED'16,
  author = {Lang Zhang and Hai Wang and Sheldon X.-D. Tan},
- title = {Fast stress analysis for runtime reliability enhancement of 3D IC using artificial neural network},
+ title = {Fast stress analysis for runtime reliability enhancement of {3D IC} using artificial neural network},
  booktitle = isqed,
  year = {2016},
  month = {March},
@@ -1658,7 +1658,7 @@ year={2008},
 }
 
 @inproceedings{Sultan:DATE'17,
-  title={A fast leakage aware thermal simulator for 3D chips},
+  title={A fast leakage aware thermal simulator for {3D} chips},
   author={Hameedah Sultan and Smruti R. Sarangi},
   booktitle= date,
   month =  {March},
@@ -1859,7 +1859,7 @@ Year={2016}
 }
 
 @inproceedings{Coskun:DATE'09,
-	title={Dynamic thermal management in 3D multicore architectures},
+	title={Dynamic thermal management in {3D} multicore architectures},
 	author={Ayse K Coskun and Jose L Ayala and David Atienza and Tajana Simunic Rosing and Yusuf Leblebici},
 	booktitle=date,
 	pages={1410--1415},
