--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -1705,14 +1705,14 @@ year = {1982},
   year={1944}
 }
 
-@Book{Goodfellow:Book’16,
+@Book{Goodfellow:Book'16,
 Author={Ian Goodfellow and Yoshua Bengio and Aaron Courville},
 Title={Deep Learning},
 Publisher={The MIT Press},
 Year={2016}
 }
 
-@article{LeCun:IEEEPROC’98,
+@article{LeCun:IEEEPROC'98,
   title={Gradient-based learning applied to document recognition},
   author={Yann LeCun and L{\'e}on Bottou and Yoshua Bengio and Patrick Haffner},
   journal= ieeeproc,
@@ -1721,17 +1721,6 @@ Year={2016}
   pages={2278--2324},
   year={1998},
   publisher={IEEE}
-}
-
-@article{Jung:ACMCOMM’14,
-  title={{TSV} stress-aware full-chip mechanical reliability analysis and optimization for {3D IC}},
-  author={Moongon Jung and Joydeep Mitra and David Z.Pan and Sung Kyu Lim},
-  journal=acmcomm,
-  volume={57},
-  number={1},
-  pages={107--115},
-  year={2014},
-  publisher={ACM}
 }
 
 @inproceedings{Wang:ASICON'01,
