--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -1,4 +1,4 @@
-﻿@string{iccad = "Proc. Int. Conf. on Computer Aided Design (ICCAD)"}
+@string{iccad = "Proc. Int. Conf. on Computer Aided Design (ICCAD)"}
 @string{dac = "Proc. Design Automation Conf. (DAC)"}
 @string{eurodac = "Proc. European Design Automation Conf."}
 @string{date = "Proc. European Design and Test Conf. (DATE)"}
@@ -1999,7 +1999,7 @@ Year={2016}
 }
 
 @article{Todri:TVLSI'13,
-	title={A study of tapered 3-D TSVs for power and thermal integrity},
+	title={A study of tapered {3-D TSVs} for power and thermal integrity},
 	author={Aida Todri and Sandip Kundu and Patrick Girard and Alberto Bosio and Luigi Dilillo and Arnaud Virazel},
 	journal=tvlsi,
 	volume={21},
