--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -1,4 +1,4 @@
-@string{iccad = "Proc. Int. Conf. on Computer Aided Design (ICCAD)"}
+﻿@string{iccad = "Proc. Int. Conf. on Computer Aided Design (ICCAD)"}
 @string{dac = "Proc. Design Automation Conf. (DAC)"}
 @string{eurodac = "Proc. European Design Automation Conf."}
 @string{date = "Proc. European Design and Test Conf. (DATE)"}
@@ -864,7 +864,7 @@ month = {June}
 @inproceedings{Kim:IBPSA'12,
 author = {Donghun Kim and James E Braun},
 title = {Reduced-Order Building Modeling For Application to Model-Based Predictive Control},
-booktitle = {5th National Conference of Innational Building Performance Simulation Association (IBPSA-USA)},
+booktitle = {National Conference of Innational Building Performance Simulation Association (IBPSA-USA)},
 year = {2012},
 pages = {554--561},
 month = aug
@@ -883,7 +883,7 @@ month = aug
 @inproceedings{Eisenhower:DFD'12,
 author = {Bryan Eisenhower and Igor Mezic},
 title = {Extracting Dynamic Information from Whole-building Energy Models},
-booktitle = {Proc. of Conference on Dynamics for Design (DFD)},
+booktitle = {Proc. of Conference on Dynamics for Design},
 year = {2012},
 pages = {3--10},
 address = {Chicago, IL},
@@ -1811,7 +1811,7 @@ Year={2016}
 }
 
 @book{Overschee:Book'2012,
-  title={{Subspace identification for linear systems: Theory—Implementation—Applications}},
+  title={{Subspace identification for linear systems: Theory-Implementation-Applications}},
   author={Peter Van Overschee and BL De Moor},
   year={2012},
   publisher={Springer Science \& Business Media}
@@ -1829,11 +1829,10 @@ Year={2016}
 
 @inproceedings{Prvara:CCA'11,
   title={Modeling and identification of a large multi-zone office building},
-  author={Samuel Pr{\'\i}vara and Zden{\v{e}}k V{\'a}{\v{n}}a and Dimitrios Gyalistras and  Ji{\v{r}}{\'\i} Cigler and Carina           Sagerschnig and Manfred Morari and Luk{\'a}{\v{s}} Ferkl},
-  booktitle={Control Applications (CCA), 2011 IEEE International Conference on},
+  author={Samuel Pr{\'\i}vara and Zden{\v{e}}k V{\'a}{\v{n}}a and Dimitrios Gyalistras and  Ji{\v{r}}{\'\i} Cigler and Carina                     Sagerschnig and Manfred Morari and Luk{\'a}{\v{s}} Ferkl},
+  booktitle={IEEE International Conference on Control Applications (CCA)},
   pages={55--60},
   year={2011},
-  organization={IEEE}
 }
 
 @article{Ferkl:BE'l0,
@@ -1859,7 +1858,7 @@ Year={2016}
 @inproceedings{Li:MSCPES'15,
   title={Building energy forecasting using system identification based on system characteristics test},
   author={Xiwang Li and Jin Wen and Er-Wei Bai},
-  booktitle={Modeling and Simulation of Cyber-Physical Energy Systems (MSCPES), 2015 Workshop on},
+  booktitle={Workshop on Modeling and Simulation of Cyber-Physical Energy Systems (MSCPES)},
   pages={1--6},
   year={2015},
   organization={IEEE}
@@ -1965,7 +1964,7 @@ Year={2016}
 @inproceedings{Cigler:ICARCV'10,
   title={Subspace identification and model predictive control for buildings},
   author={Ji{\v{r}}i Cigler and Samuel Pr{\'\i}vara},
-  booktitle={Control Automation Robotics \& Vision (ICARCV), 2010 11th International Conference on},
+  booktitle={International Conference on Control Automation Robotics \& Vision (ICARCV)},
   pages={750--755},
   year={2010},
   organization={IEEE}
@@ -1974,7 +1973,7 @@ Year={2016}
 @inproceedings{Ma:ISGT'11,
   title={Economic model predictive control for building energy systems},
   author={Jingran Ma and S Joe Qin and Bo Li and Tim Salsbury},
-  booktitle={Innovative Smart Grid Technologies (ISGT), 2011 IEEE PES},
+  booktitle={Innovative Smart Grid Technologies (ISGT)},
   pages={1--6},
   year={2011},
   organization={IEEE}
@@ -2030,7 +2029,7 @@ Year={2016}
 @inproceedings{Chan:IJCNN'99,
   title={Training recurrent network with block-diagonal approximated Levenberg-Marquardt algorithm},
   author={Lai-Wan Chan and Chi-Cheong Szeto},
-  booktitle={Neural Networks, 1999. IJCNN'99. International Joint Conference on},
+  booktitle={International Joint Conference on Neural Networks},
   volume={3},
   pages={1521--1526},
   year={1999},
@@ -2040,7 +2039,7 @@ Year={2016}
 @article{Tanoto:TELKOMNIKA'13,
   title={Levenberg-Marquardt recurrent networks for long-term electricity peak load forecasting},
   author={Yusak Tanoto and Weerakorn  Ongsakul and Charles OP Marpaung},
-  journal={TELKOMNIKA (Telecommunication Computing Electronics and Control)},
+  journal={Telecommunication Computing Electronics and Control},
   volume={9},
   number={2},
   pages={257--266},
@@ -2066,5 +2065,16 @@ Year={2016}
   number={10},
   pages={1550--1560},
   year={1990},
+  publisher={IEEE}
+}
+
+@article{Yao:TIE'2015,
+  title={Power admission control with predictive thermal management in smart buildings},
+  author={Jianguo Yao and Giuseppe Tommaso Costanzo and Guchuan Zhu and Bin Wen},
+  journal={IEEE Transactions on Industrial Electronics},
+  volume={62},
+  number={4},
+  pages={2642--2650},
+  year={2015},
   publisher={IEEE}
 }
