--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -2078,3 +2078,25 @@ Year={2016}
   year={2015},
   publisher={IEEE}
 }
+
+@article{Wang:tcasI'2006,
+  title={A fully automated recurrent neural network for unknown dynamic system identification and control},
+  author={Jeen-Shing Wang and Yen-Ping Chen},
+  journal=tcasI,
+  volume={53},
+  number={6},
+  pages={1363--1372},
+  year={2006},
+  publisher={IEEE}
+}
+
+@article{Eguia:tvlsi'2012,
+  title={General parameterized thermal modeling for high-performance microprocessor design},
+  author={Thom J Eguia and Sheldon X-D Tan and Ruijing Tan and Duo Li and Eduardo H Pacheco and Murli Tirumala and            Lingli Wang},
+  journal={tvlsi},
+  volume={20},
+  number={2},
+  pages={211--224},
+  year={2012},
+  publisher={IEEE}
+}
