--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -1698,7 +1698,7 @@ year = {1982},
 @article{Levenberg:QAM'44,
   title={A method for the solution of certain non-linear problems in least squares},
   author={Kenneth Levenberg},
-  journal={Quarterly of applied mathematics},
+  journal={Quarterly of Applied Mathematics},
   volume={2},
   number={2},
   pages={164--168},
@@ -1888,7 +1888,7 @@ Year={2016}
 @article{Calvino:EB'04,
   title={The control of indoor thermal comfort conditions: introducing a fuzzy adaptive controller},
   author={Francesco Calvino and Maria La Gennusa and Gianfranco La Gennusa and Gianluca Scaccianoce},
-  journal={Energy and buildings},
+  journal={Energy and Buildings},
   volume={36},
   number={2},
   pages={97--102},
@@ -1899,7 +1899,7 @@ Year={2016}
 @article{Soyguder:ESA'09,
   title={{Design and simulation of self-tuning PID-type fuzzy adaptive control for an expert HVAC system}},
   author={Servet Soyguder and Mehmet Karakose and Hasan Alli},
-  journal={Expert systems with applications},
+  journal={Expert Systems with Applications},
   volume={36},
   number={3},
   pages={4566--4573},
@@ -1943,7 +1943,7 @@ Year={2016}
 @article{Vsiroky:AE'11,
   title={Experimental analysis of model predictive control for an energy efficient building heating system},
   author={{Jan \v{S}}irok{\`y} and Frauke Oldewurtel and Ji{\v{r}}{\'\i} Oldewurtel and Samuel Pr{\'\i}vara},
-  journal={Applied energy},
+  journal={Applied Energy},
   volume={88},
   number={9},
   pages={3079--3087},
@@ -2092,8 +2092,8 @@ Year={2016}
 
 @article{Eguia:tvlsi'2012,
   title={General parameterized thermal modeling for high-performance microprocessor design},
-  author={Thom J Eguia and Sheldon X-D Tan and Ruijing Tan and Duo Li and Eduardo H Pacheco and Murli Tirumala and            Lingli Wang},
-  journal={tvlsi},
+  author={Thom J Eguia and Sheldon X-D Tan and Ruijing Tan and Duo Li and Eduardo H Pacheco and Murli Tirumala and Lingli Wang},
+  journal=tvlsi,
   volume={20},
   number={2},
   pages={211--224},
