--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -2038,7 +2038,7 @@ Year={2016}
 
 @article{Tanoto:TELKOMNIKA'13,
   title={Levenberg-Marquardt recurrent networks for long-term electricity peak load forecasting},
-  author={Yusak Tanoto and Weerakorn  Ongsakul and Charles OP Marpaung},
+  author={Yusak Tanoto and Weerakorn Ongsakul and Charles OP Marpaung},
   journal={Telecommunication Computing Electronics and Control},
   volume={9},
   number={2},
@@ -2049,7 +2049,7 @@ Year={2016}
 @article{Williams:NC'89,
   title={A learning algorithm for continually running fully recurrent neural networks},
   author={Ronald J Williams and David Zipser},
-  journal={Neural computation},
+  journal={Neural Computation},
   volume={1},
   number={2},
   pages={270--280},
@@ -2097,6 +2097,17 @@ Year={2016}
   volume={20},
   number={2},
   pages={211--224},
+  year={2012},
+  publisher={IEEE}
+}
+
+@article{Pan:TIE'2012,
+  title={Model predictive control of unknown nonlinear dynamical systems based on recurrent neural networks},
+  author={Yunpeng Pan and Jun Wang},
+  journal={IEEE Transactions on Industrial Electronics},
+  volume={59},
+  number={8},
+  pages={3089--3101},
   year={2012},
   publisher={IEEE}
 }
