--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -2111,3 +2111,12 @@ Year={2016}
   year={2012},
   publisher={IEEE}
 }
+
+@inproceedings{Tan:TMMSEMM'09,
+  title={{3D} circuit model for {3D IC} reliability study},
+  author={Cher Ming Tan and Feifei He},
+  booktitle={Thermal, Mechanical and Multi-Physics Simulation and Experiments in Microelectronics and Microsystems},
+  pages={1--7},
+  year={2009},
+  organization={IEEE}
+}
