--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -2120,3 +2120,39 @@ Year={2016}
   year={2009},
   organization={IEEE}
 }
+
+@inproceedings{Mitra:ECTC'11,
+  title={A fast simulation framework for full-chip thermo-mechanical stress and reliability analysis of through-silicon-via based {3D IC}s},
+  author={Joydeep Mitra and Moongon Jung and Suk-Kyu Ryu and Rui Huang and Sung-Kyu Lim and David Z Pan },
+  booktitle={Electronic Components and Technology Conference (ECTC)},
+  pages={746--753},
+  year={2011},
+  organization={IEEE}
+}
+
+@article{Kteyan:TDMR'17,
+  title={Analysis of the effect of {TSV}-induced stress on devices performance by direct strain and electrical measurements and {FEA} simulations},
+  author={ Armen Kteyan and Uwe Muehle and Martin Gall and Valeriy Sukharev and Riko Radojcic and Ehrenfried Zschech},
+  journal={IEEE Transactions on Device and Materials Reliability},
+  year={2017},
+  publisher={IEEE}
+}
+
+@inproceedings{Jung:DAC'12,
+  title={Chip/package co-analysis of thermo-mechanical stress and reliability in {TSV}-based {3D IC}s},
+  author={ Moongon Jung and David Z.Pan and Sung Kyu Lim},
+  booktitle=dac,
+  pages={317--326},
+  year={2012},
+  organization={IEEE}
+}
+
+@inproceedings{Z.Pan:DAC'12,
+  title={Design for manufacturability and reliability for {TSV}-based {3D IC}s},
+  author={ David Z.Pan and Sung Kyu Lim and Krit Athikulwongse and Moongon Jung and Joydeep Mitra and Jiwoo Pak and Mohit Pathak and Jae-seok Yang, },
+  booktitle=dac,
+  pages={750--755},
+  year={2012},
+  organization={IEEE}
+}
+
