--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -2132,7 +2132,7 @@ Year={2016}
 
 @article{Kteyan:TDMR'17,
   title={Analysis of the effect of {TSV}-induced stress on devices performance by direct strain and electrical measurements and {FEA} simulations},
-  author={ Armen Kteyan and Uwe Muehle and Martin Gall and Valeriy Sukharev and Riko Radojcic and Ehrenfried Zschech},
+  author={Armen Kteyan and Uwe Muehle and Martin Gall and Valeriy Sukharev and Riko Radojcic and Ehrenfried Zschech},
   journal={IEEE Transactions on Device and Materials Reliability},
   year={2017},
   publisher={IEEE}
@@ -2140,7 +2140,7 @@ Year={2016}
 
 @inproceedings{Jung:DAC'12,
   title={Chip/package co-analysis of thermo-mechanical stress and reliability in {TSV}-based {3D IC}s},
-  author={ Moongon Jung and David Z.Pan and Sung Kyu Lim},
+  author={Moongon Jung and David Z.Pan and Sung Kyu Lim},
   booktitle=dac,
   pages={317--326},
   year={2012},
@@ -2149,10 +2149,88 @@ Year={2016}
 
 @inproceedings{Z.Pan:DAC'12,
   title={Design for manufacturability and reliability for {TSV}-based {3D IC}s},
-  author={ David Z.Pan and Sung Kyu Lim and Krit Athikulwongse and Moongon Jung and Joydeep Mitra and Jiwoo Pak and Mohit Pathak and Jae-seok Yang, },
+  author={David Z.Pan and Sung Kyu Lim and Krit Athikulwongse and Moongon Jung and Joydeep Mitra and Jiwoo Pak and Mohit Pathak and Jae-seok Yang, },
   booktitle=dac,
   pages={750--755},
   year={2012},
   organization={IEEE}
 }
 
+@inproceedings{Pathak:PICCAD'11,
+  title={Electromigration modeling and full-chip reliability analysis for {BEOL} interconnect in {TSV}-based {3D IC}s},
+  author={Mohit Pathak and Jiwoo Pak and David Z.Pan and Sung Kyu Lim},
+  booktitle={Proceedings of the International Conference on Computer-Aided Design},
+  pages={555--562},
+  year={2011},
+  organization={IEEE Press}
+}
+
+@inproceedings{Li:ICEPT'16,
+  title={Investigation on the defect induced thermal mechanical stress for {TSV}},
+  author={Fei Li and Chengdi Xiao and Hu He and Junhui Li and Wenhui Zhu},
+  booktitle={Electronic Packaging Technology (ICEPT), 2016 17th International Conference on},
+  pages={713--715},
+  year={2016},
+  organization={IEEE}
+}
+
+@article{Jiang:MR'13,
+  title={Measurement and analysis of thermal stresses in {3D} integrated structures containing through-silicon-vias},
+  author={Tengfei Jiang and Suk-Kyu Ryu and Qiu Zhao and Jay Im and Rui Huang and Paul S Ho},
+  journal={Microelectronics Reliability},
+  volume={53},
+  number={1},
+  pages={53--62},
+  year={2013},
+  publisher={Elsevier}
+}
+
+@article{Budiman:MR'12,
+  title={Measurement of stresses in {C}u and {S}i around through-silicon via by synchrotron {X}-ray microdiffraction for 3-dimensional integrated circuits},
+  author={A.S.Budiman and H-A-S Shin and B-J Kim and S-H Hwang and H-Y Son and M-S Suh and Q-H Chung and K-Y Byun and N Tamura and M Kunz and others},
+  journal={Microelectronics Reliability},
+  volume={52},
+  number={3},
+  pages={530--533},
+  year={2012},
+  publisher={Elsevier}
+}
+
+@inproceedings{Yu:ISQED'12,
+  title={Methodology for analysis of {TSV} stress induced transistor variation and circuit performance},
+  author={Li Yu and Wen-Yao Chang and Kewei Zuo and Jean Wang and Douglas Yu and Duane Boning},
+  booktitle=isqed,
+  pages={216--222},
+  year={2012},
+  organization={IEEE}
+}
+
+@inproceedings{Jiang:DAC'13,
+  title={On effective and efficient in-field {TSV} repair for stacked {3D IC}s},
+  author={Li Jiang and Fangming Ye and Qiang Xu and Krishnendu Chakrabarty and Bill Eklow},
+  booktitle=dac,
+  pages={1--6},
+  year={2013},
+  organization={IEEE}
+}
+
+@article{Singulani:MR'13,
+  title={Stress evolution in the metal layers of {TSV}s with {B}osch scallops},
+  author={Anderson Pires Singulani and Hajdin Ceric and Siegfried Selberherr},
+  journal={Microelectronics Reliability},
+  volume={53},
+  number={9},
+  pages={1602--1605},
+  year={2013},
+  publisher={Elsevier}
+}
+
+@article{Saettler:ME'15,
+  title={$\mu$-{R}aman spectroscopy and {FE}-modeling for {TSV}-stress-characterization},
+  author={P Saettler and M Hecker and M Boettcher and C Rudolph and KJ Wolter},
+  journal={Microelectronic Engineering},
+  volume={137},
+  pages={105--110},
+  year={2015},
+  publisher={Elsevier}
+}
