--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -42,29 +42,11 @@
 @string{acmcomm="Communications of the ACM"}
 @string{socc="Proc. IEEE International System-on-Chip Conference (SOCC)"}
 @string{icsict="Proc. International Conference on Solid-State and Integrated Circuit Technology (ICSICT)"}
+@string{cdc="Proc. IEEE Conference on Decision and Control (CDC)"}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % publications from our lab
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-@inproceedings{WanWang:ICSICT'16,
- author = {Jiachun Wan and Hai Wang and Sheldon X.-D. Tan and Chi Zhang and Yuan Yuan and Keheng Huang and Zhenghong Zhang},
- title = {A Fast Full-Chip Static Power Estimation Method},
- booktitle = icsict,
- year = {2016},
- month = {October},
- location = {Hangzhou, China}
-}
-
-@inproceedings{XuWang:ICSICT'16,
- author = {Lei Xu and Hai Wang and Sheldon X.-D. Tan and Chi Zhang and Yuan Yuan and Keheng Huang and Zhenghong Zhang},
- title = {Distributed Model Predictive Control for Dynamic Thermal Management of Multi-Core Systems},
- booktitle = icsict,
- year = {2016},
- month = {October},
- location = {Hangzhou, China}
-}
-
-
 @inproceedings{WanWang:ICSICT'16,
  author = {Jiachun Wan and Hai Wang and Sheldon X.-D. Tan and Chi Zhang and Yuan Yuan and Keheng Huang and Zhenghong Zhang},
  title = {A Fast Full-Chip Static Power Estimation Method},
@@ -2224,4 +2206,13 @@ Year={2016}
   pages={105--110},
   year={2015},
   publisher={Elsevier}
+}
+
+@inproceedings{Morosan:CDC'10,
+  title={Distributed model predictive control based on {Benders'} decomposition applied to multisource multizone building temperature regulation},
+  author={Petru-Daniel Morosan and Romain Bourdais and Didier Dumur and Jean Buisson},
+  booktitle=cdc,
+  pages={3914--3919},
+  year={2010},
+  organization={IEEE}
 }
